# DustyPY

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.py  tes2.py  test.py  test2.py
DustyPY/: Data.py  DustyFit.py  MCfit.py  Mod.inp  SED.py  __init__.py  dusty.py  stars.py  utils.py
DustyPY.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DustyPY/filter/comp/nonhst/: ctio_andicam_J.fits  gaia3_gbp.fits  galex_nuv.fits  iras_25.fits  iso_lw1.fits  iso_lw3.fits  iso_lw6.fits  iso_sw10.fits  iso_sw11.fits  iso_sw2.fits  iso_sw4.fits  iso_sw5.fits  iso_sw8.fits  johnson_l.fits  pacs_100.fits  pacs_160.fits  sdss_i.fits  sdss_u.fits  skymapper_g.fits  skymapper_u.fits  skymapper_v.fits  skymapper_z.fits  wise_w3.fits
DustyPY/libs/: simpson.c
SFit/: Data.py  DustyFit.py  MCfit.py  Mod.inp  SED.py  dusty.py  stars.py  utils.py
filter/comp/nonhst/: gaia3_g.fits  gaia3_grp.fits  iras_100.fits  iras_12.fits  iso_lw2.fits  iso_lw4.fits  iso_lw7.fits  iso_lw8.fits  iso_lw9.fits  iso_sw6.fits  iso_sw7.fits  iso_sw9.fits  wise_w1.fits  wise_w2.fits  wise_w4.fits
jupyter/: exemple.ipynb
notebook/: exemple.ipynb  tutorial.ipynb
src/dustypy/: __init__.py
src/dustypy/core/: __init__.py  dataset.py  filter.py  fitter.py  likelihood.py  model.py  result.py  runner.py
src/dustypy/data/filter/: metadata.json
src/dustypy/io/: __init__.py  writer.py
src/dustypy/io/templates/: Mod.inp
src/dustypy/libs/: simpson.c
src/dustypy/utils/: __init__.py  physics.py
tests/: test_fit.py
(+23 files in other folders)
